--- a/bootstrap/exercicio5.html
+++ b/bootstrap/exercicio5.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous">
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="card mx-auto mt-5 shadow-5 shadow-lg rounded-4 bg-light" style="width: 28rem;">
+            <img src="/bootstrap/imgs/perfil.jpg" width="50%" height="220" class="mx-auto mt-4 rounded-circle" alt="type">
+            <div class="card-body">
+                <h4 class="card-title text-center text-body-secondary ">Oi, Eu sou o <span class="text-primary">Nickolas Machado</span></h4>
+                <h5 class="card-title text-center text-body-secondary">Estudante</h5>
+                <hr>
+                <p class="card-text text-center">Atualmente estou estudando Análise e Desenvolvimento de Sistemas no SENAI "Gaspar Ricardo Júnior"</p>
+                <div class="text-center">
+                <a href="https://github.com/nick0lasrm"><img src="/bootstrap/imgs/git_logo.png" class="mx-2" width="30"></a>
+                <a href="https://www.linkedin.com/in/nickolas-machado-10a110350/"><img src="/bootstrap/imgs/linkedin_logo.png" width="35"></a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
