--- a/bootstrap/exercicio6.html
+++ b/bootstrap/exercicio6.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous">
 </head>
+
 <body>
-    
+
+
+    <div class="container text-center">
+        <div class="row m-2">
+            <div class="col-lg-4 col-md-6 col-sm-12 bg-primary p-3">COLUNA 1</div>
+            <div class="col-lg-4 col-md-6 col-sm-12 bg-secondary p-3">COLUNA 2</div>
+            <div class="col-lg-4 col-md-12 col-sm-12 bg-success p-3">COLUNA 3</div>
+        </div>
+    </div>
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
