--- a/javascript/ex2.html
+++ b/javascript/ex2.html
@@ -39,7 +39,7 @@
       }
 
       for (let i = 0; i < 10; i++){
-        result.textContent += num + " x " + i + " = " + (num * i);
+        result.textContent += num +  " x " + i + " = " + (num * i)+ " ";
       }
 
     }
